--- a/blogpost.html
+++ b/blogpost.html
@@ -1,7 +1,7 @@
 <html
 ><head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <title>El titulo del post</title>
+        <title>El titulo del Hyperblog</title>
         <link rel="stylesheet" href="./css/estilos.css">
     </head>
     <body>
