--- a/blogpost.html
+++ b/blogpost.html
@@ -19,6 +19,9 @@
                     un rockstar. Pero estadísticamente no lo eres... por ahora.
                 </p>
             </div>
+            <div id="footer">
+                Hecho con amor en Platzi &copy;
+            </div>
         </div>
     
 </body></html>
