Agregue una imagen

--- a/blogpost.html
+++ b/blogpost.html
@@ -13,6 +13,7 @@
             <div id="post">
                 <h1>Este es el t&iacute;tulo atractivo e interesante del post</h1>
                 <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden hacer con ramas</p>
+                <p><img src="https://firebasestorage.googleapis.com/v0/b/proyectochat-fb763.appspot.com/o/pictures%2F1581038875711.jpg?alt=media&token=22bf363f-ce83-409b-9ffa-f081c46763d8"/></p>
                 <p>Los blogs son la mejor forma de compartir informaci&oacute;n y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. 
                     Excepto si eres un rockstar. Pero estad&iacute;sticamente no lo eres.... por ahora.</p>
                 <p>Suscribete y dale like</p>
